Partial Validation for Stash Form

--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -11967,4 +11967,8 @@ fieldset:disabled .btn {
 .text-dim {
   color: #343a40;
 }
+
+.fs-7 {
+  font-size: 0.75rem;
+}
 /*# sourceMappingURL=simple-passwords.css.map */
