Playing with Toasts

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -12,6 +12,11 @@
     color: $text-light;
 }
 
+.toast {
+    background-color: $gray-800;
+    color: $text-light;
+}
+
 .text-dim {
     color: $gray-800;
 }
