--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -11964,6 +11964,11 @@ fieldset:disabled .btn {
   color: #e9ecef;
 }
 
+.toast {
+  background-color: #343a40;
+  color: #e9ecef;
+}
+
 .text-dim {
   color: #343a40;
 }
