Switching to ReactBootstrap and fixing Toast

--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -11969,6 +11969,10 @@ fieldset:disabled .btn {
   color: #e9ecef;
 }
 
+.progress {
+  background-color: #212529;
+}
+
 .text-dim {
   color: #343a40;
 }
