Working on Open Stash

--- a/src/scss/_override.scss
+++ b/src/scss/_override.scss
@@ -20,7 +20,7 @@ $white: $gray-200;
 $black: $gray-900;
 
 $primary: $turquoise;
-$secondary: $blue;
+$secondary: $gray-700;
 $success: $turquoise;
 $danger: $red;
 $warning: $orange;
