--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -22,7 +22,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #43aa8b;
-  --bs-secondary: #577590;
+  --bs-secondary: #495057;
   --bs-success: #43aa8b;
   --bs-info: #f9c74f;
   --bs-warning: #f8961e;
@@ -30,7 +30,7 @@
   --bs-light: #e9ecef;
   --bs-dark: #212529;
   --bs-primary-rgb: 67, 170, 139;
-  --bs-secondary-rgb: 87, 117, 144;
+  --bs-secondary-rgb: 73, 80, 87;
   --bs-success-rgb: 67, 170, 139;
   --bs-info-rgb: 249, 199, 79;
   --bs-warning-rgb: 248, 150, 30;
@@ -2096,15 +2096,15 @@ progress {
 }
 
 .table-secondary {
-  --bs-table-bg: #dde3e9;
-  --bs-table-striped-bg: #d4dadf;
+  --bs-table-bg: #dbdcdd;
+  --bs-table-striped-bg: #d2d3d4;
   --bs-table-striped-color: #212529;
-  --bs-table-active-bg: #cad0d6;
+  --bs-table-active-bg: #c8cacb;
   --bs-table-active-color: #212529;
-  --bs-table-hover-bg: #cfd5db;
+  --bs-table-hover-bg: #cdced0;
   --bs-table-hover-color: #212529;
   color: #212529;
-  border-color: #cad0d6;
+  border-color: #c8cacb;
 }
 
 .table-success {
@@ -3246,43 +3246,43 @@ fieldset:disabled .btn {
 
 .btn-secondary {
   color: #e9ecef;
-  background-color: #577590;
-  border-color: #577590;
+  background-color: #495057;
+  border-color: #495057;
 }
 
 .btn-secondary:hover {
   color: #e9ecef;
-  background-color: #4a637a;
-  border-color: #465e73;
+  background-color: #3e444a;
+  border-color: #3a4046;
 }
 
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #e9ecef;
-  background-color: #4a637a;
-  border-color: #465e73;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(109, 135, 158, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(109, 135, 158, 0.5);
+  background-color: #3e444a;
+  border-color: #3a4046;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(97, 103, 110, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(97, 103, 110, 0.5);
 }
 
 .btn-check:checked + .btn-secondary,
 .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active,
 .show > .btn-secondary.dropdown-toggle {
   color: #e9ecef;
-  background-color: #465e73;
-  border-color: #41586c;
+  background-color: #3a4046;
+  border-color: #373c41;
 }
 
 .btn-check:checked + .btn-secondary:focus,
 .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus,
 .show > .btn-secondary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(109, 135, 158, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(109, 135, 158, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(97, 103, 110, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(97, 103, 110, 0.5);
 }
 
 .btn-secondary:disabled, .btn-secondary.disabled {
   color: #e9ecef;
-  background-color: #577590;
-  border-color: #577590;
+  background-color: #495057;
+  border-color: #495057;
 }
 
 .btn-success {
@@ -3566,36 +3566,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-secondary {
-  color: #577590;
-  border-color: #577590;
+  color: #495057;
+  border-color: #495057;
 }
 
 .btn-outline-secondary:hover {
   color: #e9ecef;
-  background-color: #577590;
-  border-color: #577590;
+  background-color: #495057;
+  border-color: #495057;
 }
 
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(87, 117, 144, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(87, 117, 144, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(73, 80, 87, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(73, 80, 87, 0.5);
 }
 
 .btn-check:checked + .btn-outline-secondary,
 .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
   color: #e9ecef;
-  background-color: #577590;
-  border-color: #577590;
+  background-color: #495057;
+  border-color: #495057;
 }
 
 .btn-check:checked + .btn-outline-secondary:focus,
 .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(87, 117, 144, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(87, 117, 144, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(73, 80, 87, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(73, 80, 87, 0.5);
 }
 
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #577590;
+  color: #495057;
   background-color: transparent;
 }
 
@@ -5610,13 +5610,13 @@ fieldset:disabled .btn {
 }
 
 .alert-secondary {
-  color: #344656;
-  background-color: #dde3e9;
-  border-color: #cdd6de;
+  color: #2c3034;
+  background-color: #dbdcdd;
+  border-color: #c8cbcd;
 }
 
 .alert-secondary .alert-link {
-  color: #2a3845;
+  color: #23262a;
 }
 
 .alert-success {
@@ -6029,19 +6029,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-secondary {
-  color: #344656;
-  background-color: #dde3e9;
+  color: #2c3034;
+  background-color: #dbdcdd;
 }
 
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #344656;
-  background-color: #c7ccd2;
+  color: #2c3034;
+  background-color: #c5c6c7;
 }
 
 .list-group-item-secondary.list-group-item-action.active {
   color: #e9ecef;
-  background-color: #344656;
-  border-color: #344656;
+  background-color: #2c3034;
+  border-color: #2c3034;
 }
 
 .list-group-item-success {
@@ -7360,11 +7360,11 @@ fieldset:disabled .btn {
 }
 
 .link-secondary {
-  color: #577590;
+  color: #495057;
 }
 
 .link-secondary:hover, .link-secondary:focus {
-  color: #465e73;
+  color: #3a4046;
 }
 
 .link-success {
@@ -7854,7 +7854,7 @@ fieldset:disabled .btn {
 }
 
 .border-secondary {
-  border-color: #577590 !important;
+  border-color: #495057 !important;
 }
 
 .border-success {
