--- a/src/scss/_override.scss
+++ b/src/scss/_override.scss
@@ -27,6 +27,7 @@ $warning: $orange;
 $info: $yellow;
 $dark: $gray-900;
 $light: $gray-200;
+$inset: rgba($dark, 0.75);
 
 $text-light: $gray-200;
 $text-muted: $gray-600;
