--- a/src/scss/simple-passwords.css
+++ b/src/scss/simple-passwords.css
@@ -11973,11 +11973,31 @@ fieldset:disabled .btn {
   background-color: #212529;
 }
 
-.text-dim {
-  color: #343a40;
+.fs-huge {
+  font-size: 5rem;
 }
 
 .fs-7 {
   font-size: 0.75rem;
+}
+
+.fs-8 {
+  font-size: 0.65rem;
+}
+
+.text-inset {
+  color: rgba(33, 37, 41, 0.75);
+}
+
+.btn {
+  color: rgba(33, 37, 41, 0.75);
+}
+
+.btn-secondary {
+  color: #e9ecef;
+}
+
+.avatar-gradient {
+  background-image: radial-gradient(farthest-side at 80% 50%, rgba(33, 37, 41, 0.25), transparent);
 }
 /*# sourceMappingURL=simple-passwords.css.map */
